feat(widgets): add localization to Recent Saves widget

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -307,3 +307,7 @@
 "back.to.pocket" = "Back to Pocket";
 
 "saveToPocket.tapToDismiss" = "Tap to dismiss";
+
+"widgets.recentSaves.emptyMessage" = "Add saves to Pocket to see them in here.";
+"widgets.recentSaves.loggedOutMessage" = "Log in to Pocket to see your recent saves.";
+"widgets.recentSaves.errorMessage" = "Something went wrong.";
