--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -312,3 +312,4 @@
 "widgets.recentSaves.loggedOutMessage" = "Log in to Pocket to see your recent saves.";
 "widgets.recentSaves.errorMessage" = "Something went wrong.";
 "widgets.recentSaves.title" = "Recent Saves";
+"widget.recentSaves.description" = "Access your most recently saved articles.";
