--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -308,7 +308,7 @@
 
 "saveToPocket.tapToDismiss" = "Tap to dismiss";
 
-"widgets.recentSaves.emptyMessage" = "Add saves to Pocket to see them in here.";
+"widgets.recentSaves.emptyMessage" = "Start building your Pocket list.";
 "widgets.recentSaves.loggedOutMessage" = "Log in to Pocket to see your recent saves.";
 "widgets.recentSaves.errorMessage" = "Something went wrong.";
 "widgets.recentSaves.title" = "Recent Saves";
