--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -308,11 +308,11 @@
 
 "saveToPocket.tapToDismiss" = "Tap to dismiss";
 
-"widgets.recentSaves.emptyMessage" = "Start building your Pocket list.";
-"widgets.recentSaves.loggedOutMessage" = "Log in to Pocket to see your recent saves.";
-"widgets.recentSaves.errorMessage" = "Something went wrong.";
-"widgets.recentSaves.title" = "Recent Saves";
-"widgets.recentSaves.description" = "Access your most recently saved articles.";
-"widgets.recommendations.fallbackTitle" = "Recommendations";
-"widgets.recommendations.editorsPicks.title" = "Editor's Picks";
-"widgets.recommendations.editorsPicks.description" = "Discover the most thought-provoking stories out there, curated by Pocket.";
+"itemWidgets.loggedOutMessage" = "Log in to Pocket to see your content.";
+"itemWidgets.errorMessage" = "Something went wrong.";
+"itemWidgets.recentSaves.emptyMessage" = "Start building your Pocket list.";
+"itemWidgets.recentSaves.title" = "Recent Saves";
+"itemWidgets.recentSaves.description" = "Access your most recently saved articles.";
+"itemWidgets.recommendations.fallbackTitle" = "Recommendations";
+"itemWidgets.recommendations.editorsPicks.title" = "Editor's Picks";
+"itemWidgets.recommendations.editorsPicks.description" = "Discover the most thought-provoking stories out there, curated by Pocket.";
