Widgets: Recent Saves and Recommendations Widgets (aka Item Widgets) (#735)
* feat(widgets): add base widget infrastructure

* feat(widgets): add app group to recent saves widget

* feat(widgets): fix recent saves widget app group

* feat(widgets): add recent saves widget target to PocketKit

* feat(widgets): rename some files for recent saves widget

* feat(widgets): rename some files for recent saves widget

* feat(widgets): add preview provider to the recent saves widget main target

* feat(widgets): add RecentSavesWidgetProvider

* feat(widgets): add SavesItemContent, SavedItemEntry; types to map a SavedItem into the recent saves widget

* feat(widgets): add RecentSavesView, main view of the recent saves widget

* feat(widgets): update RecentSavesWidget, use the newly created RecentSavesView

* feat(widgets): reorganize files

* feat(widgets): add RecentSavesWidgetStore and related services

* feat(widgets): update HomeViewModel, handle recent saves widget updates upon recent saves updates

* feat(widgets): update recent saves widget files

* feat(widgets): update RecentSavesProvider, RecentSavesWidget, some code cleanup

* feat(widgets): update SavedItemContent, RecentSavesWidgetStore, avoid duplicate saving and timeline reloading for recent saves widget

* feat(widgets): update RecentSavesProvider, RecentSavesView, minor refactors

* feat(widgets): update RecentSavesProvider, RecentSavesWidgetStore, add a limit for the number of entries displayed on the recent saves widget, based on widget family

* feat(widgets): update RecentSavesWidgetView, use ForEach instead of list, add custom row

* feat(widgets): update RecentSavesProvider, minor refactor

* feat(widgets): update RecentSavesView, use Kingfisher to download thumbnails
* Also add Textile dependency to RecentSavesWidgetKit, to use standard colors

* feat(CDN): move CDN url builder to SharedPocketKit

* feat(widgets): update RecentSavesView, use cdn builder to

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -307,3 +307,12 @@
 "back.to.pocket" = "Back to Pocket";
 
 "saveToPocket.tapToDismiss" = "Tap to dismiss";
+
+"itemWidgets.loggedOutMessage" = "Log in to Pocket to see your content.";
+"itemWidgets.errorMessage" = "Something went wrong.";
+"itemWidgets.recentSaves.emptyMessage" = "Start building your Pocket list.";
+"itemWidgets.recentSaves.title" = "Recent Saves";
+"itemWidgets.recentSaves.description" = "Access your most recently saved articles.";
+"itemWidgets.recommendations.emptyMessage" = "You might be offline. Please check recommendations in your Pocket app";
+"itemWidgets.recommendations.title" = "Recommendations";
+"itemWidgets.recommendations.description" = "Discover the most thought-provoking stories out there, curated by Pocket.";
