feat(collections): update home cards for collections

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -218,6 +218,8 @@
 "premium.upgradeView.unlimitedHighlights" = "Unlimited highlights";
 "premium.upgradeView.premiumFonts" = "Premium fonts";
 
+// Collection
+ "collection.title" = "Collection";
 
 //=======================
 //Old format
