feat(collections): create native collections view

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -218,9 +218,6 @@
 "premium.upgradeView.unlimitedHighlights" = "Unlimited highlights";
 "premium.upgradeView.premiumFonts" = "Premium fonts";
 
-// Collection
- "collection.title" = "Collection";
-
 //=======================
 //Old format
 
@@ -328,3 +325,7 @@
 "itemWidgets.recommendations.emptyMessage" = "You might be offline. Please check recommendations in your Pocket app";
 "itemWidgets.recommendations.title" = "Recommendations";
 "itemWidgets.recommendations.description" = "Discover the most thought-provoking stories out there, curated by Pocket.";
+
+// Collection
+"collection.title" = "Collection";
+"collection.stories.count" = "%@ items";
