Feat(loadingView): generalize PocketLoadingView and use it when loading a Collection or deleting an account

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -329,3 +329,4 @@
 // Collection
 "collection.title" = "Collection";
 "collection.stories.count" = "%@ items";
+"collection.loadingView.message" = "Loading collection...";
