--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -231,6 +231,9 @@
 "Yes" = "Yes";
 "No" = "No";
 
+// Loading view
+"loadingView.message" = "Loading...";
+
 // No internet
 "No Internet Connection" = "No internet connection";
 "Looks like you're offline. Try checking your mobile data or wifi." = "Looks like you're offline. Try checking your mobile data or wifi.";
@@ -329,4 +332,3 @@
 // Collection
 "collection.title" = "Collection";
 "collection.stories.count" = "%@ items";
-"collection.loadingView.message" = "Loading collection...";
