Loading View - Replace spinner with shapes animation (#836)
* Feat(loadingView): generalize PocketLoadingView and use it when loading a Collection or deleting an account

* feat(loadingView): update PocketLoadingView, update accessibility identifier

* feat(loadingView): update loading message

* feat(nativeCollections): fix unit tests

* feat(nativeCollections): more unit test fixes

* feat(nativeCollection): update CollectionViewModel, add documentation to emptySnapshot method

* fix lint error

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -231,6 +231,9 @@
 "Yes" = "Yes";
 "No" = "No";
 
+// Loading view
+"loadingView.message" = "Loading...";
+
 // No internet
 "No Internet Connection" = "No internet connection";
 "Looks like you're offline. Try checking your mobile data or wifi." = "Looks like you're offline. Try checking your mobile data or wifi.";
