feat(sync): reset persistent container on load error
feat(sync): refresh all coordinators on persistent store reset

feat(sync): present banner on persistent store reset

feat(sync): present banner on persistent store reset

refactor(sync): start services in app delegate

feat(sync): start services on share extension launch

feat(sync): refresh app on persistent container reset from share extension

refactor(sync): start services earlier in-app

refactor(sync): cleanup self capture

docs(sync): add docs to relating to persistent container resets

feat(sync): add breadcrumb to persistent container reset

refactor: clean up scene phase change usage

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -329,3 +329,7 @@
 // Collection
 "collection.title" = "Collection";
 "collection.stories.count" = "%@ items";
+
+// Errors
+"error.problemOccurred" = "A problem occurred";
+"error.redownloading" = "We are re-downloading your saved articles to improve your experience.";
