fix(localization) Remove localization for Collection feature

--- a/PocketKit/Sources/Localization/Resources/es-ES.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/es-ES.lproj/Localizable.strings
@@ -327,5 +327,5 @@
 "itemWidgets.recommendations.description" = "Descubre las historias más interesantes, seleccionadas por Pocket.";
 
 // Collection
-"collection.title" = "Colección";
+"collection.title" = "Collection";
 "collection.stories.count" = "%1$@ ítems";
