--- a/PocketKit/Sources/Localization/Resources/es-LA.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/es-LA.lproj/Localizable.strings
@@ -327,5 +327,5 @@
 "itemWidgets.recommendations.description" = "Descubre las historias que más invitan a la reflexión, seleccionadas por Pocket.";
 
 // Collection
-"collection.title" = "Colección";
+"collection.title" = "Collection";
 "collection.stories.count" = "%1$@ enlaces";
