--- a/PocketKit/Sources/Localization/Resources/pt-PT.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/pt-PT.lproj/Localizable.strings
@@ -327,5 +327,5 @@
 "itemWidgets.recommendations.description" = "Descobre as histórias mais instigantes, com curadoria do Pocket.";
 
 // Collection
-"collection.title" = "Coleção";
+"collection.title" = "Collection";
 "collection.stories.count" = "%1$@ itens";
