--- a/PocketKit/Sources/Localization/Resources/zh-TW.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/zh-TW.lproj/Localizable.strings
@@ -327,5 +327,5 @@
 "itemWidgets.recommendations.description" = "發掘由 Pocket 精心策劃的最發人深省篇章。";
 
 // Collection
-"collection.title" = "收藏";
+"collection.title" = "Collection";
 "collection.stories.count" = "%1$@ 個項目";
