--- a/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
@@ -330,5 +330,5 @@
 "itemWidgets.recommendations.description" = "Scopri le storie più stimolanti al momento, selezionate da Pocket.";
 
 // Collection
-"collection.title" = "Raccolta";
+"collection.title" = "Collection";
 "collection.stories.count" = "%1$@ contenuti";
