--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -325,7 +325,7 @@
 "itemWidgets.recentSaves.emptyMessage" = "Start building your Pocket list.";
 "itemWidgets.recentSaves.title" = "Recent Saves";
 "itemWidgets.recentSaves.description" = "Access your most recently saved articles.";
-"itemWidgets.recommendations.emptyMessage" = "You might be offline. Please check recommendations in your Pocket app";
+"itemWidgets.recommendations.emptyMessage" = "You might be offline. Please check your network connection.";
 "itemWidgets.recommendations.title" = "Recommendations";
 "itemWidgets.recommendations.description" = "Discover the most thought-provoking stories out there, curated by Pocket.";
 
