--- a/PocketKit/Sources/Localization/Resources/pl-PL.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/pl-PL.lproj/Localizable.strings
@@ -330,7 +330,7 @@
 "itemWidgets.recommendations.description" = "Odkryj najbardziej inspirujące historie, wyselekcjonowane przez Pocket.";
 
 // Collection
-"collection.title" = "Kolekcja";
+"collection.title" = "Collection";
 "collection.stories.count" = "Liczba elementów: %1$@";
 
 // Errors
