--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -203,6 +203,8 @@
 "reader.settings.alignmentLabel" = "Alignment";
 "reader.settings.resetToDefaultsLabel" = "Reset to defaults";
 "reader.settings.premiumUpsellLabel" = "Unlock more options";
+"reader.settings.alignmentNatural" = "Default";
+"reader.settings.alignmentJustified" = "Justified";
 
 //Recommendation
 "recommendation.save" = "Save";
