--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -198,7 +198,7 @@
 "reader.settings.title" = "Display settings";
 "reader.settings.fontLabel"  = "Font";
 "reader.settings.fontSizeLabel" = "Font size";
-"reader.settings.lineHeightLabel" = "Line Height";
+"reader.settings.lineHeightLabel" = "Line height";
 "reader.settings.marginsLabel" = "Margins";
 "reader.settings.alignmentLabel" = "Alignment";
 "reader.settings.resetToDefaultsLabel" = "Reset to defaults";
