feat(premium settings): extend restore defaults to free users and add subtitle to premium upsell

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -203,6 +203,7 @@
 "reader.settings.alignmentLabel" = "Alignment";
 "reader.settings.resetToDefaultsLabel" = "Reset to defaults";
 "reader.settings.premiumUpsellLabel" = "Unlock more options";
+"reader.settings.premiumUpselSubtitle" = "Premium fonts, text formatting and more.";
 "reader.settings.alignmentNatural" = "Default";
 "reader.settings.alignmentJustified" = "Justified";
 
