fix(tags): update Localizable.strings, update tag rename alert prompt

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -184,7 +184,7 @@
 
 "tags.renameTag" = "Rename tag";
 "tags.renameTag.message" = "Enter a new name for this tag";
-"tags.renameTag.prompt" = "tag name";
+"tags.renameTag.prompt" = "Tag name";
 
 //Reader 
 "reader.activity.save" = "Save";
