--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -340,6 +340,9 @@
 // Collection
 "collection.stories.count" = "%@ items";
 
+// Logged out
+"loggedOut.continue" = "Continue";
+
 // Errors
 "error.problemOccurred" = "A problem occurred";
 "error.redownloading" = "We are re-downloading your saved articles to improve your experience.";
