feat(highlights): add show highlights action
* Update ItemAction, add showHighlights action
* Add highlights image asset
* Add Highlights to localized strings
* Refactor haptics, consolidate the default tap into a single call
* Also fixed some unit tests that were not building

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -45,6 +45,7 @@
 "itemAction.report" = "Report";
 "itemAction.save" = "Save";
 "itemAction.share" = "Share";
+"itemAction.showHighlights" = "Highlights";
 
 //ItemList
 "itemlist.filter.search" = "Search";
