feat(highlights): add highlights filter localization

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "itemlist.filter.tagged" = "Tagged";
 "itemlist.filter.favorites" = "Favorites";
 "itemlist.filter.sortFilter" = "Sort";
+"itemlist.filter.highlightsFilter" = "Highlights";
 "itemList.edit.banner" = "Editing your list is not available in this version of Pocket, but will be returning soon!";
 
 //List view
