ceat(highlights): add highlight menu action on text selection, unless an highlight is selected

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -47,6 +47,9 @@
 "itemAction.share" = "Share";
 "itemAction.showHighlights" = "Highlights";
 
+// Edit Actions
+"editAction.highlight" = "Highlight";
+
 //ItemList
 "itemlist.filter.search" = "Search";
 "itemlist.filter.all" = "All";
