--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -345,6 +345,9 @@
 // Collection
 "collection.stories.count" = "%@ items";
 
+// Shared With You
+"sharedWithYou.title" = "Shared With You";
+
 // Logged out
 "loggedOut.continue" = "Continue";
 
