feat(highlights): improve the highlight on swipe experience

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -199,6 +199,8 @@
 "reader.activity.favorite" = "Favorite";
 "reader.activity.unfavorite" = "Unfavorite";
 "reader.activity.moveToSaves" = "Move to Saves";
+"reader.swipeAction.highlight" = "Highlight";
+"reader.swipeAction.deleteHighlights" = "Delete Highlights";
 
 // Reader Settings
 "reader.settings.title" = "Display settings";
