Highlights - improve the highlight on swipe experience (#977)
* feat(highlights): improve the highlight on swipe experience

* feat(Highlights): update ReadableViewController, use the default gray background for swipe to delete highlights action

* feat(Highlights): improve titles in swipe actions

* fix(bs): update diff match patch framework with new signing cert

* feat(highlights): refactor method in ReadableViewController

* feat(Highlights): update ImageComponentCell, use invalidateIntrinsicContentSize to redraw the image view when the image gets set

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -199,6 +199,9 @@
 "reader.activity.favorite" = "Favorite";
 "reader.activity.unfavorite" = "Unfavorite";
 "reader.activity.moveToSaves" = "Move to Saves";
+"reader.swipeAction.highlight" = "Highlight";
+"reader.swipeAction.deleteHighlights" = "Delete Highlights";
+"reader.swipeAction.deleteHighlight" = "Delete Highlight";
 
 // Reader Settings
 "reader.settings.title" = "Display settings";
