--- a/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
@@ -358,5 +358,5 @@
 // Tips
 "tips.swipeToArchive.title" = "Scorri per archiviare";
 "tips.swipeToArchive.message" = "Scorri verso sinistra su un articolo per archiviarlo rapidamente.";
-"tips.swipeHighlights.title" = "Scorri i momenti salienti";
+"tips.swipeHighlights.title" = "Scorri per evidenziare";
 "tips.swipeHighlights.message" = "Scorri verso sinistra su un paragrafo per evidenziarlo. In alternativa, scorri e seleziona \"Elimina evidenziazioni\" per rimuovere qualsiasi evidenziazione esistente.";
