--- a/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
@@ -199,7 +199,7 @@
 "reader.activity.favorite" = "Aggiungi ai preferiti";
 "reader.activity.unfavorite" = "Rimuovi dai preferiti";
 "reader.activity.moveToSaves" = "Vai su Salvati";
-"reader.swipeAction.highlight" = "In evidenza";
+"reader.swipeAction.highlight" = "Evidenzia";
 "reader.swipeAction.deleteHighlights" = "Elimina le evidenziazioni";
 "reader.swipeAction.deleteHighlight" = "Elimina evidenziazione";
 
