--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -364,3 +364,5 @@
 "tips.swipeToArchive.message" = "Swipe left on an article to archive it quickly.";
 "tips.swipeHighlights.title" = "Swipe Highlights";
 "tips.swipeHighlights.message" = "Swipe left on a paragraph to highlight it. Alternatively, swipe and select 'Delete Highlights' to remove any existing highlighting.";
+"tips.recommendationsWidget.selectTopic.title" = "New Recommendations Widget!";
+"tips.recommendationsWidget.selectTopic.message" = "Long-press on the Recommendations Widget to choose a topic of interest.\nInstall multiple widgets to keep track of all your favorite topics.";
