feat(alternate icons): update SelectIconView, add default and custom icon sections
Also add localizations for section headers

--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -167,6 +167,8 @@
 "settings.premium.settings.contactPocketSupport" = "Contact Pocket support";
 // app icon
 "settings.appIcon.title" = "App Icon";
+"settings.appIcon.thematicIconSectionHeader" = "Let Pocket choose your icon";
+"settings.appIcon.customIconSectionHeader" = "Or select your favorite icon";
 
 //Sorting Options
 "sortingOption.sortBy" = "Sort by";
