--- a/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/en.lproj/Localizable.strings
@@ -374,6 +374,6 @@
 "tips.swipeHighlights.message" = "Swipe left on a paragraph to highlight it. Alternatively, swipe and select 'Delete Highlights' to remove any existing highlighting.";
 "tips.recommendationsWidget.selectTopic.title" = "New Recommendations Widget!";
 "tips.recommendationsWidget.selectTopic.message" = "Long-press on the Recommendations Widget to choose a topic of interest.\nInstall multiple widgets to keep track of all your favorite topics.";
-"tips.sharedWithYouActions.title" = "Tap here to reply to this message or long press to remove this item.";
-"tips.sharedWithYouActions.message" = "Tap the attribution view to reply, long press it to remove an item or reply.";
+"tips.sharedWithYouActions.title" = "Shared With You actions";
+"tips.sharedWithYouActions.message" = "Tap here to reply to this message or long press to remove this item.";
 
