--- a/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
+++ b/PocketKit/Sources/Localization/Resources/it-IT.lproj/Localizable.strings
@@ -169,7 +169,7 @@
 "settings.appIcon.title" = "Icona dell'app";
 "settings.appIcon.thematicIconSectionHeader" = "Lascia che Pocket scelga la tua icona";
 "settings.appIcon.customIconSectionHeader" = "Oppure seleziona la tua icona preferita";
-"settings.appIcon.iconName.default" = "Predefinito";
+"settings.appIcon.iconName.default" = "Predefinita";
 "settings.appIcon.iconName.classic" = "Classica";
 "settings.appIcon.iconName.monochrome" = "Monocromatica";
 "settings.appIcon.iconName.pride" = "Pride";
@@ -363,7 +363,7 @@
 // Logged out
 "loggedOut.continue" = "Continua";
 "loggedOut.continue.authenticate" = "Registrati o accedi";
-"loggedOut.continue.signedOut" = "Salta l'accesso";
+"loggedOut.continue.signedOut" = "Accedi senza registrarti";
 "loggedOut.footer" = "Procedendo, accetti i [Termini di servizio] (https://getpocket.com/tos) e l'[Informativa sulla privacy] (https://getpocket.com/privacy) di Pocket";
 
 // Errors
@@ -376,7 +376,7 @@
 "tips.swipeHighlights.title" = "Scorri per evidenziare";
 "tips.swipeHighlights.message" = "Passa il dito a sinistra su un paragrafo per evidenziarlo. In alternativa, scorri e seleziona \"Elimina evidenziazioni\" per rimuovere le evidenziazioni in quel paragrafo.";
 "tips.recommendationsWidget.selectTopic.title" = "Nuovo widget per le raccomandazioni!";
-"tips.recommendationsWidget.selectTopic.message" = "Premi a lungo sul Widget delle Raccomandazioni per scegliere un argomento di interesse.\nInstalla più widget per tenere traccia di tutti i tuoi argomenti preferiti.";
+"tips.recommendationsWidget.selectTopic.message" = "Tieni premuto sul Widget delle Raccomandazioni per scegliere un argomento di interesse.\nInstalla più widget per seguire i tuoi argomenti preferiti.";
 "tips.sharedWithYouActions.title" = "Altre azioni";
-"tips.sharedWithYouActions.message" = "Tocca qui per rispondere a questo messaggio o premi a lungo per rimuovere questo contenuto.";
+"tips.sharedWithYouActions.message" = "Tocca qui per rispondere a questo messaggio o tieni premuto per rimuovere questo contenuto.";
 
